[ASTERIXDB-3569][TEST] Reorganize and clean tests
Details:
-Move surefire/failsafe into pluginManagement and only bring
either into a module build when that module contains tests of
that type.

-Clean up CI profiles so that the build will only be passed
if tests are missing due to a clear and explicit wholesale
exclusion of either unit or integration tests, and only for
either type respectively.

Ext-ref: MB-58891

Change-Id: I9ba2ce7afc54ddd08f5e522627c56e22f51c21d1
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19452
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Ian Maxon <imaxon@apache.org>
Reviewed-by: Michael Blow <mblow@apache.org>